// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportStatusPropertyField Should Render correctly when export process is 'Completed With Critical Errors' 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="export-status-details"
>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1h8vygf-MuiTypography-root"
      data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
      id="field-id"
      tabindex="0"
    >
      Status
    </h6>
  </div>
  <div
    aria-labelledby="field-id"
    class="MuiBox-root css-taz3go"
  >
    <div
      class="MuiBox-root css-1t5r8n4"
    >
      <svg
        class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-13bdyef-MuiSvgIcon-root"
        data-testid="icon-status-success-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
        />
        <title>
          Export failed
        </title>
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1os18n4-MuiTypography-root"
        data-testid="message-c2031286-4333-4e71-a003-388bf91dc1b9"
      >
        Completed with 
        <span
          class="MuiBox-root css-dnqt5d"
        >
          critical errors
        </span>
        <span
          data-testid="help-tip-error-c2031286-4333-4e71-a003-388bf91dc1b9"
        >
          The export process could not start or complete due to a technical error. Please try again later or contact us if the problem persists.
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`ExportStatusPropertyField Should Render correctly when export process is 'Completed With Export Errors and Export Warnings' 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="export-status-details"
>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1h8vygf-MuiTypography-root"
      data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
      id="field-id"
      tabindex="0"
    >
      Status
    </h6>
  </div>
  <div
    aria-labelledby="field-id"
    class="MuiBox-root css-taz3go"
  >
    <div
      class="MuiBox-root css-1t5r8n4"
    >
      <svg
        class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-13bdyef-MuiSvgIcon-root"
        data-testid="icon-status-success-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
        />
        <title>
          Exported completed with errors
        </title>
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1os18n4-MuiTypography-root"
        data-testid="message-c2031286-4333-4e71-a003-388bf91dc1b9"
      >
        <span>
          Completed with
        </span>
        <span
          class="MuiBox-root css-dnqt5d"
        >
           export errors
        </span>
        <span
          data-testid="help-tip-export-error-c2031286-4333-4e71-a003-388bf91dc1b9"
        >
          The csv files have inconsistencies that could not be resolved. The model was exported but is not consistent. Please review the csv files and try again.
        </span>
        and 
        <span
          class="MuiBox-root css-dnqt5d"
        >
          export warnings
        </span>
        <span
          data-testid="help-tip-export-warning-c2031286-4333-4e71-a003-388bf91dc1b9"
        >
          One or more rows or some field could not be exported, but the model was still exported and is consistent. Please review the csv files and try again.
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`ExportStatusPropertyField Should Render correctly when export process is 'Completed With Export Errors' 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="export-status-details"
>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1h8vygf-MuiTypography-root"
      data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
      id="field-id"
      tabindex="0"
    >
      Status
    </h6>
  </div>
  <div
    aria-labelledby="field-id"
    class="MuiBox-root css-taz3go"
  >
    <div
      class="MuiBox-root css-1t5r8n4"
    >
      <svg
        class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeMedium css-13bdyef-MuiSvgIcon-root"
        data-testid="icon-status-success-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
        />
        <title>
          Exported completed with errors
        </title>
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1os18n4-MuiTypography-root"
        data-testid="message-c2031286-4333-4e71-a003-388bf91dc1b9"
      >
        Completed with 
        <span
          class="MuiBox-root css-dnqt5d"
        >
          export errors
        </span>
        <span
          data-testid="help-tip-export-error-c2031286-4333-4e71-a003-388bf91dc1b9"
        >
          The csv files have inconsistencies that could not be resolved. The model was exported but is not consistent. Please review the csv files and try again.
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`ExportStatusPropertyField Should Render correctly when export process is 'Completed With Export Warnings' 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="export-status-details"
>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1h8vygf-MuiTypography-root"
      data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
      id="field-id"
      tabindex="0"
    >
      Status
    </h6>
  </div>
  <div
    aria-labelledby="field-id"
    class="MuiBox-root css-taz3go"
  >
    <div
      class="MuiBox-root css-1t5r8n4"
    >
      <svg
        class="MuiSvgIcon-root MuiSvgIcon-colorWarning MuiSvgIcon-fontSizeMedium css-h6esa3-MuiSvgIcon-root"
        data-testid="icon-status-success-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
        />
        <title>
          Export completed with warnings
        </title>
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1os18n4-MuiTypography-root"
        data-testid="message-c2031286-4333-4e71-a003-388bf91dc1b9"
      >
        Completed with 
        <span
          class="MuiBox-root css-dnqt5d"
        >
          export warnings
        </span>
        <span
          data-testid="help-tip-export-warning-c2031286-4333-4e71-a003-388bf91dc1b9"
        >
          One or more rows or some field could not be exported, but the model was still exported and is consistent. Please review the csv files and try again.
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`ExportStatusPropertyField Should Render correctly when export process is 'Completed' 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="export-status-details"
>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1h8vygf-MuiTypography-root"
      data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
      id="field-id"
      tabindex="0"
    >
      Status
    </h6>
  </div>
  <div
    aria-labelledby="field-id"
    class="MuiBox-root css-taz3go"
  >
    <div
      class="MuiBox-root css-1t5r8n4"
    >
      <svg
        class="MuiSvgIcon-root MuiSvgIcon-colorSuccess MuiSvgIcon-fontSizeMedium css-1x9cg3q-MuiSvgIcon-root"
        data-testid="icon-status-success-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
        />
        <title>
          Export was successful
        </title>
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1os18n4-MuiTypography-root"
        data-testid="message-c2031286-4333-4e71-a003-388bf91dc1b9"
      >
        Completed successfully
        <span
          data-testid="help-tip-success-c2031286-4333-4e71-a003-388bf91dc1b9"
        >
          The export process has completed successfully.
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`ExportStatusPropertyField Should Render correctly when export process is 'Pending' 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="export-status-details"
>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1h8vygf-MuiTypography-root"
      data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
      id="field-id"
      tabindex="0"
    >
      Status
    </h6>
  </div>
  <div
    aria-labelledby="field-id"
    class="MuiBox-root css-taz3go"
  >
    <div
      class="MuiBox-root css-1t5r8n4"
    >
      <svg
        class="MuiSvgIcon-root MuiSvgIcon-colorDisabled MuiSvgIcon-fontSizeMedium css-1xle09y-MuiSvgIcon-root"
        data-testid="icon-status-pending-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
        />
        <title>
          Pending
        </title>
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1os18n4-MuiTypography-root"
        data-testid="message-c2031286-4333-4e71-a003-388bf91dc1b9"
      >
        Pending
        <span
          data-testid="help-tip-pending-c2031286-4333-4e71-a003-388bf91dc1b9"
        >
          The export process has not yet started.
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`ExportStatusPropertyField Should Render correctly when export process is 'Running' 1`] = `
<div
  class="MuiBox-root css-1ofqig9"
  data-testid="export-status-details"
>
  <div
    class="MuiBox-root css-70qvj9"
  >
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1h8vygf-MuiTypography-root"
      data-testid="item-title-5abb0d55-4073-4f5b-8432-ee8c96aa4df2"
      id="field-id"
      tabindex="0"
    >
      Status
    </h6>
  </div>
  <div
    aria-labelledby="field-id"
    class="MuiBox-root css-taz3go"
  >
    <div
      class="MuiBox-root css-1t5r8n4"
    >
      <svg
        class="MuiSvgIcon-root MuiSvgIcon-colorInfo MuiSvgIcon-fontSizeMedium css-1wn4sen-MuiSvgIcon-root"
        data-testid="icon-status-running-bae86ed9-33bf-4492-a0e2-f9c8bd112bae"
        focusable="false"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
        />
        <title>
          Export in progress
        </title>
      </svg>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1os18n4-MuiTypography-root"
        data-testid="message-c2031286-4333-4e71-a003-388bf91dc1b9"
      >
        Running
        <span
          data-testid="help-tip-running-c2031286-4333-4e71-a003-388bf91dc1b9"
        >
          The export process is running.
        </span>
      </p>
    </div>
  </div>
</div>
`;
